ROO-2986: Post 1.2.0.RELEASE code refactor and clean up - applied ER cleanup profile